--- a/assets/scss/light.scss
+++ b/assets/scss/light.scss
@@ -8,9 +8,16 @@ $link-color: #528672;
 $base-dropdown-link-hover-bg: #ecc187;
 $btn-active-border-color: $base-dropdown-link-hover-bg;
 $base-navbar-bg: #376550;
-$navbar-bg: rgba($primary, 0.95);
-$dropdown-bg: rgba($base-dropdown-link-hover-bg, 0.90);
-$dropdown-link-hover-bg: rgba($base-navbar-bg, 0.70);
+$navbar-bg: rgba(58, 100, 57, .90);
+// $dropdown-bg: rgba($base-dropdown-link-hover-bg, 0.90);
+// $dropdown-link-hover-bg: rgba($base-navbar-bg, 0.70);
+// $dropdown-bg: unset;
+$dropdown-link-hover-bg: unset;
+$dropdown-link-color: rgb(80, 129, 132);
+$dropdown-border-color: unset;
+$dropdown-border-radius: 0.5rem;
+$dropdown-border-width: 2px;
+$dropdown-divider-bg: antiquewhite;
 $card-border-color: $body-color;
 $card-bg: $body-bg;
 $source-code: #770505;
@@ -27,13 +34,37 @@ a:hover, .nav-footer a:hover, .quarto-listing-category > .category:hover {
 .nav-footer-left a {
   color: $primary;
 }
-
+/* Header / Navbar */
 #quarto-header {
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.5);
 }
 .quarto-title-banner {
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.5);
 }
+// keeps page title color same on hover
+.navbar-title-container .nav-link:hover {
+  color: var(--bs-nav-link-color);
+}
+.navbar-nav .dropdown-menu {
+  min-width: var(--bs-dropdown-min-width);
+  font-size: 1rem;
+}
+// can use to change link hover colors in Navbar
+// $nav-link-hover-color: ;
+#quarto-header .dropdown-menu {
+  background: linear-gradient(135deg, rgb(236 193 135) 10%, rgb(228 25 186 / 67%) 100%);
+  border-width: 0;
+  overflow: hidden;
+}
+a.dropdown-item:hover {
+  background-clip: padding-box;
+  box-shadow: inset 0 0 12px 0 $navbar-bg;
+}
+#quarto-content a#quarto-back-to-top:hover {
+  background: linear-gradient(135deg, rgb(236 193 135) 10%, rgb(228 25 186 / 67%) 100%);
+  text-decoration-line: unset;
+}
+
 /* Code Highlight Style */
 code:not(.sourceCode) {
   border: 1px solid $code-color;
@@ -77,7 +108,7 @@ figcaption {
 }
 /* callouts */
 div.callout-note.callout-titled .callout-icon::before {
-    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: rgb(236,193,135);" class="bi bi-info-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/></svg>');
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: rgb(236,193,135);" class="bi bi-info-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/></svg>');
 }
 div.callout-note.callout {
   border-left-color: rgba($primary, 0.8);
@@ -90,10 +121,7 @@ div.callout-note.callout-style-default > .callout-header {
 .callout-note .callout-header {
   color: var(--bs-btn-active-border-color);
 }
-/* navbar */
-.navbar-title-container .nav-link:hover {
-  color: var(--bs-nav-link-color);
-}
+
 /* footer */
 .footer .fa-heart-pulse {
   color: $primary;
