update quarto from 1.4.424 to 1.5.57:
* add lazy-loading to euler listing with lazy-loaded listing grid image explicitly set in yaml due to bug
* add draft-mode: unlinked
* move drafts to .drafts/ folder due to page navigation / sidebar link bug
* fix code copying in template
* update styling & theme to account for boostrap version change

--- a/assets/scss/light.scss
+++ b/assets/scss/light.scss
@@ -23,6 +23,8 @@ $card-bg: $body-bg;
 $source-code: #770505;
 $code-color: $source-code;
 $code-padding: .1em .2em;
+// Listing 
+$card-title-color: $primary;
 
 /*-- scss:rules --*/
 :root {
@@ -87,7 +89,17 @@ div > details > summary {
 h1, h2, h3, h4, h5, h6 {
   color: $primary;
 }
-/* Posts */
+/* Listing Posts */
+// for Euler listing 
+div.card-attribution.end.euler {
+  color: darken($body-bg, 5%);
+  background-color: lighten($navbar-bg, 2%);
+  padding-top: 4px;
+  padding-right: 1rem;
+  padding-bottom: 4px;
+  padding-left: 0px;
+}
+// for "Last Updated" e.g. 'file-modified' field
 .card-footer {
   color: darken($body-bg, 5%);
   background-color: lighten($navbar-bg, 2%);
