--- a/assets/scss/light.scss
+++ b/assets/scss/light.scss
@@ -112,7 +112,8 @@ div.card-attribution.end.euler {
   box-shadow: 0.10rem 0.10rem .35rem $base-navbar-bg;
 }
 .quarto-category:hover {
-  background: $base-dropdown-link-hover-bg;
+  // background: $base-dropdown-link-hover-bg;
+  background: linear-gradient(135deg, rgb(236, 193, 135) 10%, rgba(228, 25, 186, 0.67) 100%);
 }
 /* captions */
 figcaption {
